--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,23 +1,18 @@
 {% extends 'blog/base.html' %}
-{% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
 	<form method='POST'>
 		{% csrf_token %}
 		<fieldset class='form-group'>
 			<legend class="border-botttom mb-4">
-			Join Today
+			 Delete Post
 			</legend>
-			{{ form|crispy }}
+			<h2>Are you sure you want to delete the post "{{ object.title }}</h2>
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit">Sign Up</button>
+			<button class="btn btn-outline-danger" type="submit">Yes, Delete </button>
+			<a class="btn btn-outline-secondary" href="{% url 'blog:post-detail' object.id %}" >Cancel </a>
 		</div>
 	</form>
-	<div class="border-top pt-3">
-		<small class="text-muted">
-			Already have An Account?<a class="ml-2" href="{% url 'login' %}">Sign In</a>
-		</small>
-	</div>
 </div>
 {% endblock content %}
