--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -6,21 +6,14 @@
 		{% csrf_token %}
 		<fieldset class='form-group'>
 			<legend class="border-botttom mb-4">
-			Log In 
+			Reset Password  
 			</legend>
 			{{ form|crispy }}
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit">Login</button>
-			<small class="text-muted ml-2">
-				<a href="{% url 'password_reset' %}">Forgot Password</a>
-			</small>
+			<button class="btn btn-outline-info" type="submit">Reset Password</button>
 		</div>
 	</form>
-	<div class="border-top pt-3">
-		<small class="text-muted">
-			Need An Account?<a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-		</small>
-	</div>
+
 </div>
 {% endblock content %}
